--- a/styles/main.css
+++ b/styles/main.css
@@ -380,7 +380,7 @@ nav h1{
         padding: 0.8rem;
         position: fixed;
         top: 0rem;
-        width: 38rem;
+        width: 100%;
     }
     .nav-links ul{
         /* display: flex;
