--- a/styles/main.css
+++ b/styles/main.css
@@ -62,6 +62,9 @@ nav h1{
     background-color: #161A30;
     padding: 5px;
     display: none;
+    outline: none;
+    border: none;
+    
     /* border: 1px solid rgba(151, 151, 151, 0.952);
     border-radius: 5px; */
 }
